Check if freetype is already found

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -348,7 +348,9 @@ if(NOT NO_FONT_INTERFACE_DEFAULT)
 	if(EMSCRIPTEN)
 		set(EMSCRIPTEN_FLAGS "${EMSCRIPTEN_FLAGS} -sUSE_FREETYPE=1")
 	else()
-		find_package(Freetype REQUIRED)
+		if(NOT FREETYPE_FOUND)
+			find_package(Freetype REQUIRED)
+		endif()
 		if(MSVC AND FREETYPE_VERSION_STRING STREQUAL "2.11.0")
 			message(WARNING "You are using FreeType version 2.11.0 which introduced an issue that causes a crash on startup on some of the samples. Please avoid this version specifically.")
 		endif()
